// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collate.icu.utf8.sql > line 15 1`] = `
[
  "CREATE SCHEMA collate_tests",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaname": "collate_tests",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 31 1`] = `
[
  "CREATE TABLE collate_test_fail (
    a int,
    b text COLLATE "foo-x-icu"
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_fail",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "foo-x-icu",
                        },
                      },
                    ],
                    "location": 55,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 48,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 36 1`] = `
[
  "CREATE TABLE collate_test_fail (
    a int COLLATE "en-x-icu",
    b text
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_fail",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "en-x-icu",
                        },
                      },
                    ],
                    "location": 43,
                  },
                  "colname": "a",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 67,
                  "typeName": {
                    "location": 69,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 41 1`] = `
[
  "CREATE TABLE collate_test_like (
    LIKE collate_test1
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_like",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "TableLikeClause": {
                  "relation": {
                    "inh": true,
                    "location": 42,
                    "relname": "collate_test1",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 52 1`] = `
[
  "CREATE TABLE collate_test3 (
    a int,
    b text COLLATE "C"
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 51,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 57 1`] = `
[
  "INSERT INTO collate_test1 VALUES (1, 'abc'), (2, 'äbc'), (3, 'bbc'), (4, 'ABC');",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 34,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "abc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 46,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 49,
                            "sval": {
                              "sval": "äbc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 3,
                            },
                            "location": 59,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 62,
                            "sval": {
                              "sval": "bbc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 71,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 74,
                            "sval": {
                              "sval": "ABC",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 80,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 58 1`] = `
[
  "INSERT INTO collate_test2 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 59 1`] = `
[
  "INSERT INTO collate_test3 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test3",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 62 1`] = `
[
  "SELECT * FROM collate_test2 WHERE b >= 'bbc';",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "bbc",
                    },
                  },
                },
              },
            },
          },
        },
        "stmt_len": 44,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 63 1`] = `
[
  "SELECT * FROM collate_test3 WHERE b >= 'bbc';",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "bbc",
                    },
                  },
                },
              },
            },
          },
        },
        "stmt_len": 44,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 67 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b >= 'bbc' COLLATE "C";",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "CollateClause": {
                    "arg": {
                      "A_Const": {
                        "location": 39,
                        "sval": {
                          "sval": "bbc",
                        },
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 45,
                  },
                },
              },
            },
          },
        },
        "stmt_len": 56,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 68 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'bbc' COLLATE "C";",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "CollateClause": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "b",
                            },
                          },
                        ],
                        "location": 34,
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 48,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "CollateClause": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "bbc",
                        },
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
              },
            },
          },
        },
        "stmt_len": 68,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 69 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'bbc' COLLATE "en-x-icu";",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "CollateClause": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "b",
                            },
                          },
                        ],
                        "location": 34,
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 48,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "CollateClause": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "bbc",
                        },
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "en-x-icu",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
              },
            },
          },
        },
        "stmt_len": 75,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 72 1`] = `
[
  "CREATE DOMAIN testdomain_sv AS text COLLATE "sv-x-icu";",
  {
    "stmts": [
      {
        "stmt": {
          "CreateDomainStmt": {
            "collClause": {
              "collname": [
                {
                  "String": {
                    "sval": "sv-x-icu",
                  },
                },
              ],
              "location": 36,
            },
            "domainname": [
              {
                "String": {
                  "sval": "testdomain_sv",
                },
              },
            ],
            "typeName": {
              "location": 31,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
        "stmt_len": 54,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 73 1`] = `
[
  "CREATE DOMAIN testdomain_i AS int COLLATE "sv-x-icu";",
  {
    "stmts": [
      {
        "stmt": {
          "CreateDomainStmt": {
            "collClause": {
              "collname": [
                {
                  "String": {
                    "sval": "sv-x-icu",
                  },
                },
              ],
              "location": 34,
            },
            "domainname": [
              {
                "String": {
                  "sval": "testdomain_i",
                },
              },
            ],
            "typeName": {
              "location": 30,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
        "stmt_len": 52,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 74 1`] = `
[
  "CREATE TABLE collate_test4 (
    a int,
    b testdomain_sv
);",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test4",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "testdomain_sv",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 61,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 78 1`] = `
[
  "INSERT INTO collate_test4 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test4",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 79 1`] = `
[
  "SELECT a, b FROM collate_test4 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test4",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 85 1`] = `
[
  "INSERT INTO collate_test5 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test5",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 86 1`] = `
[
  "SELECT a, b FROM collate_test5 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test5",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 89 1`] = `
[
  "SELECT a, b FROM collate_test1 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 90 1`] = `
[
  "SELECT a, b FROM collate_test2 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 91 1`] = `
[
  "SELECT a, b FROM collate_test3 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 96 1`] = `
[
  "SELECT * FROM collate_test1 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 97 1`] = `
[
  "SELECT * FROM collate_test2 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 98 1`] = `
[
  "SELECT * FROM collate_test3 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 101 1`] = `
[
  "SELECT 'bbc' COLLATE "en-x-icu" > 'äbc' COLLATE "en-x-icu" AS "true";
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "CollateClause": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "bbc",
                              },
                            },
                          },
                          "collname": [
                            {
                              "String": {
                                "sval": "en-x-icu",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 32,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "CollateClause": {
                          "arg": {
                            "A_Const": {
                              "location": 34,
                              "sval": {
                                "sval": "äbc",
                              },
                            },
                          },
                          "collname": [
                            {
                              "String": {
                                "sval": "en-x-icu",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 69,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 250 1`] = `
[
  "WITH RECURSIVE foo(x) AS
   (SELECT x FROM (VALUES('a' COLLATE "en-x-icu"),('b')) t(x)
   UNION ALL
   SELECT (x || 'c') COLLATE "de-x-icu" FROM foo WHERE length(x) < 10)
SELECT * FROM foo;


-- casting
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 185,
                  "relname": "foo",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 178,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 178,
                    },
                  },
                },
              },
            ],
            "withClause": {
              "ctes": [
                {
                  "CommonTableExpr": {
                    "aliascolnames": [
                      {
                        "String": {
                          "sval": "x",
                        },
                      },
                    ],
                    "ctematerialized": "CTEMaterializeDefault",
                    "ctename": "foo",
                    "ctequery": {
                      "SelectStmt": {
                        "all": true,
                        "larg": {
                          "fromClause": [
                            {
                              "RangeSubselect": {
                                "alias": {
                                  "aliasname": "t",
                                  "colnames": [
                                    {
                                      "String": {
                                        "sval": "x",
                                      },
                                    },
                                  ],
                                },
                                "subquery": {
                                  "SelectStmt": {
                                    "limitOption": "LIMIT_OPTION_DEFAULT",
                                    "op": "SETOP_NONE",
                                    "valuesLists": [
                                      {
                                        "List": {
                                          "items": [
                                            {
                                              "CollateClause": {
                                                "arg": {
                                                  "A_Const": {
                                                    "location": 51,
                                                    "sval": {
                                                      "sval": "a",
                                                    },
                                                  },
                                                },
                                                "collname": [
                                                  {
                                                    "String": {
                                                      "sval": "en-x-icu",
                                                    },
                                                  },
                                                ],
                                                "location": 55,
                                              },
                                            },
                                          ],
                                        },
                                      },
                                      {
                                        "List": {
                                          "items": [
                                            {
                                              "A_Const": {
                                                "location": 76,
                                                "sval": {
                                                  "sval": "b",
                                                },
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 36,
                                "val": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "x",
                                        },
                                      },
                                    ],
                                    "location": 36,
                                  },
                                },
                              },
                            },
                          ],
                        },
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_UNION",
                        "rarg": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 145,
                                "relname": "foo",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 110,
                                "val": {
                                  "CollateClause": {
                                    "arg": {
                                      "A_Expr": {
                                        "kind": "AEXPR_OP",
                                        "lexpr": {
                                          "ColumnRef": {
                                            "fields": [
                                              {
                                                "String": {
                                                  "sval": "x",
                                                },
                                              },
                                            ],
                                            "location": 111,
                                          },
                                        },
                                        "location": 113,
                                        "name": [
                                          {
                                            "String": {
                                              "sval": "||",
                                            },
                                          },
                                        ],
                                        "rexpr": {
                                          "A_Const": {
                                            "location": 116,
                                            "sval": {
                                              "sval": "c",
                                            },
                                          },
                                        },
                                      },
                                    },
                                    "collname": [
                                      {
                                        "String": {
                                          "sval": "de-x-icu",
                                        },
                                      },
                                    ],
                                    "location": 121,
                                  },
                                },
                              },
                            },
                          ],
                          "whereClause": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "x",
                                            },
                                          },
                                        ],
                                        "location": 162,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "length",
                                      },
                                    },
                                  ],
                                  "location": 155,
                                },
                              },
                              "location": 165,
                              "name": [
                                {
                                  "String": {
                                    "sval": "<",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 167,
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                    "location": 15,
                  },
                },
              ],
              "recursive": true,
            },
          },
        },
        "stmt_len": 188,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 640 1`] = `
[
  ";
SET enable_seqscan = off;",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 23,
                  "sval": {
                    "sval": "off",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_seqscan",
          },
        },
        "stmt_len": 25,
        "stmt_location": 1,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 642 1`] = `
[
  "SELECT x FROM test4c WHER",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "wher",
                  },
                  "inh": true,
                  "location": 14,
                  "relname": "test4c",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "x",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.icu.utf8.sql > line 702 1`] = `
[
  ";
SELECT * FROM test10pk;
SELECT ",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "test10pk",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 23,
        "stmt_location": 1,
      },
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
          },
        },
        "stmt_location": 25,
      },
    ],
    "version": 160001,
  },
]
`;
